Fix overflow for widgets

--- a/src/widgets/tagging/MultiSelect/styles.scss
+++ b/src/widgets/tagging/MultiSelect/styles.scss
@@ -1,5 +1,5 @@
 @import '~base-scss/base';
 
 .multi-select-widget {
-    // padding: $spacing-small;
+    height: 100%;
 }
